--- a/trunk/Makefile
+++ b/trunk/Makefile
@@ -22,8 +22,8 @@ do_program_test:
 	tests/testProgram
 	
 do_allprogram_test:
-	bin/lifeGameEmulator -iterations 10 -outputFilename tests/testsFileResult/AllProgramResult -proximity neumann -saveAsTxT true -saveAsPicture true -saveEveryIteration 2
-	bin/lifeGameEmulator -iterations 5 -saveEveryIteration 1 -saveAsPicture true -outputFilename tests/testsFileResult/AllProgramResult -flatArea true
+	bin/lifeGameEmulator -iterations 10 -outputFilename tests/testsFileResults/AllProgramResult -proximity moore -saveAsTxT true -saveAsPicture true -saveEveryIteration 2
+	bin/lifeGameEmulator -iterations 5 -saveEveryIteration 1 -saveAsPicture true -outputFilename tests/testsFileResults/AllProgramResult -flatArea true
 	bin/lifeGameEmulator -iterations 10 -flatArea true
 	bin/lifeGameEmulator -help -iterations 10 -saveAsPicture true
 	bin/lifeGameEmulator -printOnScreen false
